apps/overlays/k3d-example/game-2048/ingress-k3d.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-2048-k3d-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: traefik
  rules:
  - host: game-2048.k3d-example.lessingstrasse.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game-2048
            port:
              number: 80
  tls:
  - hosts:
    - game-2048.k3d-example.lessingstrasse.org
    secretName: game-2048.k3d-example.lessingstrasse.org
